<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="view"
            type="com.github.algamza.bucketplace.view.MainActivity" />
        <variable
            name="viewModel"
            type="com.github.algamza.bucketplace.view.MainViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity"
        android:background="@color/gray">

        <LinearLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/STR_LOGOUT"
                android:gravity="center"
                android:background="@color/button"
                android:onClick="@{()->view.onClickLogOut()}"
                app:goneUnless="@{viewModel.login}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/STR_LOGIN"
                android:gravity="center"
                android:background="@color/button"
                android:onClick="@{()->view.onClickSignIn()}"
                app:goneUnless="@{!viewModel.login}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/STR_SIGNUP"
                android:gravity="center"
                android:background="@color/button"
                android:onClick="@{()->view.onClickSignUp()}"
                app:goneUnless="@{!viewModel.login}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <fragment
            android:id="@+id/nav_host"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toTopOf="@+id/nav_controller_view"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:navGraph="@navigation/nav_main" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_controller_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bottom"
            app:itemTextColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nav_host"
            app:menu="@menu/nav_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>